Fixed shift vertical position when bring of global ban manager

--- a/styles/master.css
+++ b/styles/master.css
@@ -978,7 +978,7 @@ div#unavailables ul#unallowed_pool li.character span.name_tag { position: absolu
 body[data-ctrl="1"] div#unavailables ul#unallowed_pool li.character span.name_tag { opacity: 1; }
 
 
-div#player_info_op_cp { --center-area-size: 320px; --center-area-cutoff: var(--center-area-size); position: relative; top: 0; left: 0; right: 0; margin: 30px 0 0; /* transition-duration: 0.27s; */ }
+div#player_info_op_cp { --center-area-size: 320px; --center-area-cutoff: var(--center-area-size); position: relative; top: 30px; left: 0; right: 0; margin: 0 0; /* transition-duration: 0.27s; */ }
 div#player_info_op_cp div.player_info_side { --margin-outside: 72px; --margin-innerside: 112px; --inter-padding: 4px; display: flex; flex-wrap: nowrap; position: absolute; top: 0px; width: calc(((100% - var(--center-area-cutoff)) / 2) - var(--margin-innerside)); margin: 0 auto; font-size: 18px; }
 div#player_info_op_cp div.player_info_side.red { flex-direction: row-reverse; left: var(--margin-outside); }
 div#player_info_op_cp div.player_info_side.blue { flex-direction: row; right: var(--margin-outside); }
